--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
             <div class="header-title">
                 <h1 class="logo">Batty's coffee stand</h1>
                 <p class="title-text">あなたに最高のコーヒーを提供します。</p>
+                <p style="color: red;font-size: 14px class="title-text">あなたに最高のコーヒーを提供します。</p>
             </div>
             <ul class="header-navigatuin">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Menu</a></li>
+                <li><a href="#">Contact</a></li>
     
             </ul>
         </div>
